--- a/index.html
+++ b/index.html
@@ -7,33 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>presente pro lyan nenem sz</title>
+    <title>presente pro luquinhas sz</title>
 </head>
 <body>
     <div class="greetings">
         
-        <span>F</span>
         <span>E</span>
-        <span>L</span>
-        <span>I</span>
-        <span>Z</span>
+        <span>U</span>
         <span>_</span>
-        <span>A</span>
-        <span>N</span>
-        <span>I</span>
-        <span>V</span>
+        <span>T</span>
         <span>E</span>
-        <span>R</span>
-        <span>S</span>
-        <span>A </span>
-        <span>R</span>
-        <span>I</span>
-        <span>O</span>
         <span>_</span>
         <span>A</span>
         <span>M</span>
         <span>O</span>
-        <span>R</span>
+
     </div>
     <div class="description">
         <span>clique no botao para ver um presente especial =D </span>
